src/components/ThreadsPage/ThreadsList/Thread/Thread.module.scss
@import '../../../../styles/_variables';
@import '../../../../styles/_breakpoints';

.Thread {
  list-style: none;
  text-align: center;
  border-bottom: 2px solid var(--black);
  position: relative;
  width: 100%;
  height: 110px;
  display: flex;
  padding: 1rem;
  justify-content: center;
  flex-direction: column;
  background-color: white;
  transition: background-color 0.2s;
  &:hover {
    background-color: var(--neutral);
    cursor: pointer;
  }
}

@include mobilePortrait {
  .Thread {
    padding: 1rem;
    height: 105px;
  }
}

.Thread:last-of-type {
  border-bottom: none;
}

.threadBlockDiv {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
}

.threadTitle {
  margin-bottom: 0.5rem;
  transition: color 0.2s;
  font-size: 1rem;
  width: 240px;
  margin: 0 auto 0.2rem;
}

@include mobilePortrait {
  .threadTitle {
    width: 350px;
    font-size: 1.1rem;
  }
}

@include mobileLandscape {
  .threadTitle {
    font-size: 1.2rem;
    width: 600px;
  }
}

.threadAvatarImg {
  height: 50px;
  width: 50px;
  border-radius: 50%;
  margin-right: 1.5rem;
}

@include mobilePortrait {
  .threadAvatarImg {
    height: 65px;
    width: 65px;
  }
}

.threadFlexDiv {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.deleteThreadButton {
  position: absolute;
  top: 0.5rem;
  right: 1rem;
  font-size: 1rem;
  font-weight: bold;
  color: var(--black);
  transition: color 0.2s;
  background-color: transparent;
  outline: none;
  border: none;
  &:hover {
    color: var(--warning);
    cursor: pointer;
    outline: none;
  }
  &:focus {
    outline: none;
  }
}

@include mobilePortrait {
  .deleteThreadButton {
    right: 1.5rem;
  }
}

.deleteX {
  outline: none;
  background-color: transparent;
  transition: color .2s;
  &:hover {
    color: var(--warning);
  }
}

.lastMessage {
  color: var(--black);
  opacity: 0.9;
  font-size: 0.8rem;
}

.lastMessageContent {
  color: var(--dark2);
  margin-left: 0.3rem;
  display: inline-block;
  font-size: 0.8rem;
}

.lastMessageSent {
  color: var(--dark1);
  opacity: 0.8;
  font-size: 0.8rem;
}

@include mobilePortrait {
  .lastMessage {
    font-size: 0.9rem;
  }

  .lastMessageContent {
    font-size: 0.9rem;
  }
}

@include mobilePortrait {
  .lastMessage {
    font-size: 0.9rem;
  }
}

.userUserName {
  display: none;
}

@include mobileLandscape {
  .userUserName {
    display: inline-block;
  }
}

.lastMessageContainer {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  margin: 0.5rem auto;
}

@include mobilePortrait {
  .lastMessageContainer {
    flex-direction: row;
    align-items: center;
  }
}

